# l2b2l

./: .gitignore  README.md  bystrotex.xml  example-for-pandoc.scrbl  example.scrbl  l2b2l.cabal  package.yaml  project.nix  stack.yaml  test.scrbl
app/: B2L.hs  B2Pan.hs  BystroToc.hs  L2B.hs
src/: BystroConf.hs  L2B.hs  NaiveSExp.hs  SExp2LaTeX.hs  SExp2Pandoc.hs
test/: Spec.hs
