name:                l2b2l
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/amkhlv/l2b2l#readme
license:             BSD3
license-file:        LICENSE
author:              Andrei Mikhailov
maintainer:          amkhlv@gmail.com
copyright:           2017 Andrei Mikhailov
category:            LaTeX
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable l2b
  hs-source-dirs:      src
  main-is:             L2B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , directory
                       , text
                       , parsec
                       , HaTeX == 3.17.2.0
                       , wl-pprint-extras